Adding container, working with reason-react

--- a/src/index.html
+++ b/src/index.html
@@ -199,6 +199,7 @@
   <body>
     <div id="root"></div>
     <script src="/bs_v7.0.2-dev.1.js"></script>
+    <script src="/bs_reason-react.js"></script>
     <script src="/Index.js"></script>
   </body>
 </html>
