--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>BuckleScript toplevel</title>
+    <title>BuckleScript REPL</title>
     <link
       rel="stylesheet"
       href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
@@ -198,7 +198,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/bs_v7.0.2-dev.1.js"></script>
     <script src="/Index.js"></script>
   </body>
 </html>
